# src/controllers/auth.controller.js
@@ -13,6 +13,21 @@ module.exports = {
 
     login: async (req, res) => {
         /*
+            #swagger.tags = ['Authentication']
+            #swagger.summary = 'JWT:Login'
+            #swagger.description = 'Login with username and password'
+            _swagger.deprecated = true         ----> başında çizgi değil kare var gene ama algılanmasın diye böle. üstünüğ çiziyor ve aktif değil diyor
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    username: 'test',
+                    password: '1234'
+                }
+            }
+        */
+
+        /*
         const { username, password } = req.body
 
         if (username && password) {
@@ -65,6 +80,7 @@ module.exports = {
             throw new Error('Please enter username and password.')
         }
         */
+        
         const checkUser = await checkUserAndSetToken(req.body)
         if (checkUser.error) {
             res.errorStatusCode = 401
@@ -75,6 +91,21 @@ module.exports = {
     },
 
     refresh: async (req, res) => {
+
+          /*
+            #swagger.tags = ['Authentication']
+            #swagger.summary = 'JWT:Refresh'
+            #swagger.description = 'Refresh accessToken with refreshToken'
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    token: {
+                        refresh: '...refreshToken...'
+                    }
+                }
+            }
+        */
 
         const refreshToken = req.body?.token?.refresh || null
 
@@ -103,6 +134,11 @@ module.exports = {
     },
 
     logout: async (req, res) => {
+          /*
+            #swagger.tags = ['Authentication']
+            #swagger.summary = 'JWT:Logout'
+            #swagger.description = 'No need any doing for logout. You must deleted Bearer Token from your browser.'
+        */
         res.send({
             error: false,
             message: 'No need any doing for logout. You must deleted Bearer Token from your browser.'
